--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -64,9 +64,50 @@
         </div>
 
         <div class="About">
-            <h1 class="abouttag">About</h1>
+            <h1 class="abouttitle">About</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <div class="abouttags">
+                <div class="abouttag">
+                    <img src="aboutimg1.jpg" alt="">
+                    <h1>John Doe</h1>
+                    <h3>CEO & Founder</h3>
+                    <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    </p>
+                    <p><button>contact</button></p>
+                </div>
+                <div class="abouttag">
+                    <img src="aboutimg2.jpg" alt="">
+                    <h1>John Doe</h1>
+                    <h3>CEO & Founder</h3>
+                    <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    </p>
+                    <p><button>contact</button></p>
+                </div>
+                <div class="abouttag">
+                    <img src="aboutimg3.jpg" alt="">
+                    <h1>John Doe</h1>
+                    <h3>CEO & Founder</h3>
+                    <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    </p>
+                    <p><button>contact</button></p>
 
-
+                </div>
+                <div class="abouttag">
+                    <img src="aboutimg4.jpg" alt="">
+                    <h1>John Doe</h1>
+                    <h3>CEO & Founder</h3>
+                    <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    </p>
+                    <p><button>contact</button></p>
+                </div>
+            </div>
 
         </div>
 
