--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -76,36 +76,35 @@
             <div class="abouttags">
                 <div class="abouttag">
                     <img src="aboutimg1.jpg" alt="">
-                    <h1>John Doe</h1>
-                    <h3>CEO & Founder</h3>
+                    <h2>John Doe</h2>
+                    <h4>CEO & Founder</h4>
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                     </p>
-                    <p><button>contact</button></p>
+                    <p><button class="aboutbutton">contact</button></p>
                 </div>
                 <div class="abouttag">
                     <img src="aboutimg2.jpg" alt="">
-                    <h1>John Doe</h1>
-                    <h3>CEO & Founder</h3>
+                    <h2>John Doe</h2>
+                    <h4>CEO & Founder</h4>
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                     </p>
-                    <p><button>contact</button></p>
+                    <p><button class="aboutbutton">contact</button></p>
                 </div>
                 <div class="abouttag">
                     <img src="aboutimg3.jpg" alt="">
-                    <h1>John Doe</h1>
-                    <h3>CEO & Founder</h3>
+                    <h2>John Doe</h2>
+                    <h4>CEO & Founder</h4>
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                     </p>
-                    <p><button>contact</button></p>
-
+                    <p><button class="aboutbutton">contact</button></p>
                 </div>
                 <div class="abouttag">
                     <img src="aboutimg4.jpg" alt="">
-                    <h1>John Doe</h1>
-                    <h3>CEO & Founder</h3>
+                    <h2>John Doe</h2>
+                    <h4>CEO & Founder</h4>
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                     </p>
-                    <p><button>contact</button></p>
+                    <p><button class="aboutbutton">contact</button></p>
                 </div>
             </div>
 
