--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -84,30 +84,41 @@
                 </div>
                 <div class="abouttag">
                     <img src="aboutimg2.jpg" alt="">
-                    <h2>John Doe</h2>
-                    <h4>CEO & Founder</h4>
+                    <h2>Jane Doe</h2>
+                    <h4>Architect</h4>
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                     </p>
                     <p><button class="aboutbutton">contact</button></p>
                 </div>
                 <div class="abouttag">
                     <img src="aboutimg3.jpg" alt="">
-                    <h2>John Doe</h2>
-                    <h4>CEO & Founder</h4>
+                    <h2>Mike Ross</h2>
+                    <h4>Architect</h4>
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                     </p>
                     <p><button class="aboutbutton">contact</button></p>
                 </div>
                 <div class="abouttag">
                     <img src="aboutimg4.jpg" alt="">
-                    <h2>John Doe</h2>
-                    <h4>CEO & Founder</h4>
+                    <h2>Dan Star</h2>
+                    <h4>Architect</h4>
                     <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
                     </p>
                     <p><button class="aboutbutton">contact</button></p>
                 </div>
             </div>
+            <div class="contacts">
+                <h1>contact</h1>
+                <label for="">Lets get in touch and talk about your next project.</label>
+                <div class="inputbox">
+                    <input class="input" type="text" placeholder="Name">
+                    <input class="input" type="text" placeholder="Email">
+                    <input class="input" type="text" placeholder="Subject">
+                    <input class="input" type="text" placeholder="Comment">
+                </div>
 
+
+            </div>
         </div>
 
 
