--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -110,13 +110,13 @@
             <div class="contacts">
                 <h1>contact</h1>
                 <label for="">Lets get in touch and talk about your next project.</label>
-                <div class="inputbox">
+              <form action=""> 
                     <input class="input" type="text" placeholder="Name">
                     <input class="input" type="text" placeholder="Email">
                     <input class="input" type="text" placeholder="Subject">
                     <input class="input" type="text" placeholder="Comment">
-                </div>
-
+                <button>SEND MESSAGE</button>
+                </form>
 
             </div>
         </div>
