--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -115,7 +115,7 @@
                     <input class="input" type="text" placeholder="Email">
                     <input class="input" type="text" placeholder="Subject">
                     <input class="input" type="text" placeholder="Comment">
-                <button>SEND MESSAGE</button>
+                <button class="formbutton">SEND MESSAGE</button>
                 </form>
 
             </div>
