--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="contacts">
-                <h1>contact</h1>
+                <h1>Contact</h1>
                 <label for="">Lets get in touch and talk about your next project.</label>
               <form action=""> 
                     <input class="input" type="text" placeholder="Name">
