--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -110,15 +110,16 @@
             <div class="contacts">
                 <h1>Contact</h1>
                 <label for="">Lets get in touch and talk about your next project.</label>
-              <form action=""> 
+                <form action="">
                     <input class="input" type="text" placeholder="Name">
                     <input class="input" type="text" placeholder="Email">
                     <input class="input" type="text" placeholder="Subject">
                     <input class="input" type="text" placeholder="Comment">
-                <button class="formbutton">SEND MESSAGE</button>
+                    <button class="formbutton">SEND MESSAGE</button>
                 </form>
-
+<img class="footerimg" src="footerimg.jpg" alt="">
             </div>
+
         </div>
 
 
