--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -119,10 +119,11 @@
                 </form>
 <img class="footerimg" src="footerimg.jpg" alt="">
             </div>
+            
 
         </div>
 
-
+        <footer>Powered by <u> w3.css</u></footer>
 
 
     </main>
