--- a/tamplete assignment/index.html
+++ b/tamplete assignment/index.html
@@ -27,6 +27,7 @@
     <main>
         <div class="Projects">
             <h1 class="projectstag">Projects</h1>
+            <p class="projecttagp"></p>
             <div class="projectimgs">
                 <div class="projectimg">
                     <h2 class="projecttitle">Summer House</h2>
@@ -65,6 +66,7 @@
 
         <div class="About">
             <h1 class="abouttitle">About</h1>
+            <p class="abouttagp"></p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Excepteur sint
@@ -109,6 +111,7 @@
             </div>
             <div class="contacts">
                 <h1>Contact</h1>
+                <p class="contacnttagp"></p>
                 <label for="">Lets get in touch and talk about your next project.</label>
                 <form action="">
                     <input class="input" type="text" placeholder="Name">
