--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -13,8 +13,6 @@
         <div class="company">
             <h2>Company <br>Name<br></h2>
         </div>
-
-
         <div class="menu">
             <a href="#post">Home</a>
             <a href="#post">Showcase</a>
@@ -24,21 +22,25 @@
             <a href="#post">Contact</a>
         </div>
     </nav>
+
     <main>
         <div class="heading">
             <h1>Interior Design</h1>
             <h2>Showcase.</h2>
+            <p></p>
         </div>
         <div class="gridimg">
-            <img src="showcaseimg1.jpg" alt="img1">
-            <img src="showcaseimg2.jpg" alt="img2">
-            <img src="showcaseimg3.jpg" alt="img3">
-            <img src="showcaseimg4.jpg" alt="img4">
-            <img src="showcaseimg5.jpg" alt="img5">
-            <img src="showcaseimg6.jpg" alt="img6">
+            <div class="leftgridimg">
+                <img src="showcaseimg1.jpg" alt="img1">
+                <img src="showcaseimg3.jpg" alt="img2">
+                <img src="showcaseimg5.jpg" alt="img3">
+            </div>
+            <div class="rightgridimg">
+                <img src="showcaseimg2.jpg" alt="img4">
+                <img src="showcaseimg4.jpg" alt="img5">
+                <img src="showcaseimg6.jpg" alt="img6">
+            </div>
         </div>
-
-
     </main>
 </body>
 
