--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -46,7 +46,6 @@
             <h2></h2>
             <p>We are a interior design service that focus on what's best for your home and what's best for you!
                 <br><br>
-
                 Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing
                 elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                 nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -61,7 +60,6 @@
             <h2></h2>
             <p>The best team in the world.
                 <br><br>
-
                 We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
@@ -69,6 +67,32 @@
                 deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                 labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
+        </div>
+        <div class="designers">
+            <h3>Our designers are thoughtfully chosen:</h3>
+            <div class="designersimg">
+                <div class="designersbox">
+                    <img src="aboutimg1.jpg" alt="">
+                    <h2>John Doe</h2>
+                    <h4>CEO & Founder</h4>
+                    <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    </p>
+                </div>
+                <div class="designersbox">
+                    <img src="aboutimg2.jpg" alt="">
+                    <h2>John Doe</h2>
+                    <h4>CEO & Founder</h4>
+                    <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    </p>
+                </div>
+                <div class="designersbox">
+                    <img src="aboutimg3.jpg" alt="">
+                    <h2>John Doe</h2>
+                    <h4>CEO & Founder</h4>
+                    <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    </p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
