--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -94,6 +94,39 @@
                 </div>
             </div>
         </div>
+        <div class="services">
+            <h1>Packages.</h1>
+            <h2></h2>
+            <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure</p>
+        </div>
+        <div class="leftlist">
+            <ul>
+                <li>Basic</li>
+                <li>Floorplanning</li>
+                <li>10 hours support</li>
+                <li>Photography</li>
+                <li>20% furniture discount</li>
+                <li>Good deals</li>
+                <li>$ 199
+                    per room</li>
+                <button>Sign Up</button>
+            </ul>
+        </div>
+        <div class="rightlist">
+            <ul>
+                <li>Pro</li>
+                <li>Floorplanning</li>
+                <li>50 hours support</li>
+                <li>Photography</li>
+                <li>50% furniture discount</li>
+                <li>GREAT deals</li>
+                <li>$ 249
+                    per room</li>
+                <button>Sign Up</button>
+            </ul>
+        </div>
     </main>
 </body>
 
