--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -101,6 +101,7 @@
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat. Duis aute irure</p>
         </div>
+        <div class="list"> 
         <div class="leftlist">
             <ul>
                 <li>Basic</li>
@@ -127,6 +128,7 @@
                 <button>Sign Up</button>
             </ul>
         </div>
+    </div>
     </main>
 </body>
 
