--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </div>
-        <div class="services">
+        <div class="Packages">
             <h1>Packages.</h1>
             <h2></h2>
             <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
