--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -104,7 +104,7 @@
         <div class="list"> 
         <div class="leftlist">
             <ul>
-                <li>Basic</li>
+                <li class="title">Basic</li>
                 <li>Floorplanning</li>
                 <li>10 hours support</li>
                 <li>Photography</li>
@@ -117,7 +117,7 @@
         </div>
         <div class="rightlist">
             <ul>
-                <li>Pro</li>
+                <li class="title">Pro</li>
                 <li>Floorplanning</li>
                 <li>50 hours support</li>
                 <li>Photography</li>
