--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -14,22 +14,22 @@
             <h2>Company <br>Name<br></h2>
         </div>
         <div class="menu">
-            <a href="#post">Home</a>
-            <a href="#post">Showcase</a>
-            <a href="#post">Services</a>
-            <a href="#post">Designers</a>
-            <a href="#post">Packages</a>
-            <a href="#post">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#showcase">Showcase</a>
+            <a href="#services">Services</a>
+            <a href="#designers">Designers</a>
+            <a href="#packages">Packages</a>
+            <a href="#contact">Contact</a>
         </div>
     </nav>
 
     <main>
-        <div class="heading">
+        <div class="heading" id="home">
             <h1>Interior Design</h1>
             <h2>Showcase.</h2>
             <p></p>
         </div>
-        <div class="gridimg">
+        <div class="gridimg" id="Showcase">
             <div class="leftgridimg">
                 <img src="showcaseimg1.jpg" alt="img1">
                 <img src="showcaseimg3.jpg" alt="img2">
@@ -41,7 +41,7 @@
                 <img src="showcaseimg6.jpg" alt="img6">
             </div>
         </div>
-        <div class="services">
+        <div class="services" id="services">
             <h1>Services</h1>
             <h2></h2>
             <p>We are a interior design service that focus on what's best for your home and what's best for you!
@@ -55,7 +55,7 @@
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
         </div>
-        <div class="services">
+        <div class="services" id="designers">
             <h1>Designers.</h1>
             <h2></h2>
             <p>The best team in the world.
@@ -68,7 +68,7 @@
                 labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
         </div>
-        <div class="designers">
+        <div class="designers" id="designers">
             <h3>Our designers are thoughtfully chosen:</h3>
             <div class="designersimg">
                 <div class="designersbox">
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </div>
-        <div class="Packages">
+        <div class="Packages" id="Packages">
             <h1>Packages.</h1>
             <h2></h2>
             <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -112,7 +112,7 @@
                 <li>Good deals</li>
                 <li>$ 199
                     per room</li>
-                <button>Sign Up</button>
+                    <li> <button>Sign Up</button></li>
             </ul>
         </div>
         <div class="rightlist">
@@ -125,7 +125,7 @@
                 <li>GREAT deals</li>
                 <li>$ 249
                     per room</li>
-                <button>Sign Up</button>
+                <li> <button>Sign Up</button></li>
             </ul>
         </div>
     </div>
