--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -105,13 +105,19 @@
         <div class="leftlist">
             <ul>
                 <li class="title">Basic</li>
+                <hr>
                 <li>Floorplanning</li>
+                <hr>
                 <li>10 hours support</li>
+                <hr>
                 <li>Photography</li>
+                <hr>
                 <li>20% furniture discount</li>
+                <hr>
                 <li>Good deals</li>
+                <hr>
                 <li>$ 199
-                    per room</li>
+                    per room</li><hr>
                     <li> <button>Sign Up</button></li>
             </ul>
         </div>
@@ -119,12 +125,18 @@
             <ul>
                 <li class="title">Pro</li>
                 <li>Floorplanning</li>
+                <hr>
                 <li>50 hours support</li>
+                <hr>
                 <li>Photography</li>
+                <hr>
                 <li>50% furniture discount</li>
+                <hr>
                 <li>GREAT deals</li>
+                <hr>
                 <li>$ 249
                     per room</li>
+                    <hr>
                 <li> <button>Sign Up</button></li>
             </ul>
         </div>
