--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -101,48 +101,51 @@
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat. Duis aute irure</p>
         </div>
-        <div class="list"> 
-        <div class="leftlist">
-            <ul>
-                <li class="title">Basic</li>
-                <hr>
-                <li>Floorplanning</li>
-                <hr>
-                <li>10 hours support</li>
-                <hr>
-                <li>Photography</li>
-                <hr>
-                <li>20% furniture discount</li>
-                <hr>
-                <li>Good deals</li>
-                <hr>
-                <li>
-                    <h1> $ 199</h1>
-                    per room</li><hr>
-                    <li> <button>Sign Up</button></li>
-            </ul>
-        </div>
-        <div class="rightlist">
-            <ul>
-                <li class="title">Pro</li>
-                <li>Floorplanning</li>
-                <hr>
-                <li>50 hours support</li>
-                <hr>
-                <li>Photography</li>
-                <hr>
-                <li>50% furniture discount</li>
-                <hr>
-                <li>GREAT deals</li>
-                <hr>
-                <li>
-                    <h1> $ 249</h1>
-                    per room</li>
+        <div class="list">
+            <div class="leftlist">
+                <ul>
+                    <li class="title">Basic</li>
                     <hr>
-                <li> <button>Sign Up</button></li>
-            </ul>
+                    <li>Floorplanning</li>
+                    <hr>
+                    <li>10 hours support</li>
+                    <hr>
+                    <li>Photography</li>
+                    <hr>
+                    <li>20% furniture discount</li>
+                    <hr>
+                    <li>Good deals</li>
+                    <hr>
+                    <li>
+                        <h1> $ 199</h1>
+                        per room
+                    </li>
+                    <hr>
+                    <li> <button>Sign Up</button></li>
+                </ul>
+            </div>
+            <div class="rightlist">
+                <ul>
+                    <li class="title">Pro</li>
+                    <li>Floorplanning</li>
+                    <hr>
+                    <li>50 hours support</li>
+                    <hr>
+                    <li>Photography</li>
+                    <hr>
+                    <li>50% furniture discount</li>
+                    <hr>
+                    <li>GREAT deals</li>
+                    <hr>
+                    <li>
+                        <h1> $ 249</h1>
+                        per room
+                    </li>
+                    <hr>
+                    <li> <button>Sign Up</button></li>
+                </ul>
+            </div>
         </div>
-    </div>
     </main>
 </body>
 
