--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -146,6 +146,21 @@
                 </ul>
             </div>
         </div>
+        <div class="form">
+            <h1>Contacts.</h1>
+            <h2></h2>
+            <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting
+                new people!</p>
+                <form action="">
+                    <label for="">Name</label><br>
+                    <input type="text"><br>
+                    <label for="">Email</label><br>
+                    <input type="text"><br>
+                    <label for="">Message</label><br>
+                    <input type="text">
+                    <button>Send Message</button>
+                </form>
+        </div>
     </main>
 </body>
 
