--- a/Interior Template/index.html
+++ b/Interior Template/index.html
@@ -162,6 +162,9 @@
                 </form>
         </div>
     </main>
+    <footer>
+        <p>Powered by <u> w3.css</u></p>
+    </footer>
 </body>
 
 </html>
