--- a/Ashion template/blog.html
+++ b/Ashion template/blog.html
@@ -34,7 +34,7 @@
                     <a href="">PAGE</a>
                 </li>
                 <li>
-                    <a href="">BLOG</a>
+                    <a href="blog.html">BLOG</a>
                 </li>
                 <li>
                     <a href="">CONTACT</a>
