--- a/Ashion template/contact.html
+++ b/Ashion template/contact.html
@@ -56,15 +56,8 @@
         <i id="menubar" class="fa fa-bars" style="font-size:36px"></i>
     </nav>
 
-    <section class="unique-contact-info">
+    <section class="unique-contact-section">
         <div class="unique-container">
-            <div class="unique-contact-details">
-                <h2>Contact Info</h2>
-                <p><strong>Address:</strong> 160 Pennsylvania Ave NW, Washington, Castle, PA 16101-5161</p>
-                <p><strong>Phone:</strong> 125-711-811 | 125-668-886</p>
-                <p><strong>Support:</strong> Support.photography@gmail.com</p>
-            </div>
-
             <div class="unique-contact-form">
                 <h3>Send Message</h3>
                 <form action="#">
@@ -75,12 +68,12 @@
                     <button type="submit">Send Message</button>
                 </form>
             </div>
+
+            <!-- Map Section -->
+            <div class="unique-map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.6386213877643!2d-74.09001068462199!3d40.986620979302066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2fbdfcb59fadb%3A0x6af3a8a4ff0d8f78!2sSaddle%20River%2C%20NJ%2007488%2C%20USA!5e0!3m2!1sen!2sin!4v1636490299475!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </div>
-    </section>
-    <section class="unique-map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.6386213877643!2d-74.09001068462199!3d40.986620979302066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2fbdfcb59fadb%3A0x6af3a8a4ff0d8f78!2sSaddle%20River%2C%20NJ%2007488%2C%20USA!5e0!3m2!1sen!2sin!4v1636490299475!5m2!1sen!2sin"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
 
