--- a/Ashion template/shop.html
+++ b/Ashion template/shop.html
@@ -34,10 +34,10 @@
                     <a href="">PAGE</a>
                 </li>
                 <li>
-                    <a href="">BLOG</a>
+                    <a href="blog.html">BLOG</a>
                 </li>
                 <li>
-                    <a href="">CONTACT</a>
+                    <a href="contact.html">CONTACT</a>
                 </li>
             </ul>
         </div>
