--- a/Ashion template/contact.html
+++ b/Ashion template/contact.html
@@ -71,9 +71,7 @@
 
 
             <div class="unique-map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.6386213877643!2d-74.09001068462199!3d40.986620979302066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2fbdfcb59fadb%3A0x6af3a8a4ff0d8f78!2sSaddle%20River%2C%20NJ%2007488%2C%20USA!5e0!3m2!1sen!2sin!4v1636490299475!5m2!1sen!2sin"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5939.94529227455!2d75.7624458928694!3d26.858882675881727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5debf22fa8f%3A0x79ea81d0af2764a3!2sCityPark%20Jaipur!5e0!3m2!1sen!2sin!4v1726209332831!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading=" " referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
