--- a/diwaliprojects/weather cards/index.html
+++ b/diwaliprojects/weather cards/index.html
@@ -16,7 +16,7 @@
                 <h1>17°</h1>
             </div>
             <div class="weather-icon">
-                <img src="Cloud Weather.png" alt="Cloudy">
+                <img src="Cloud.png" alt="Cloudy">
             </div>
         </div>
         <div class="weather-card raining">
