--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -10,9 +10,9 @@
 
 <body class="bg-gray-900 text-gray-400 h-screen items-center flex flex-col">
 
-   
-     
- 
+
+
+
     <div class="flex-1 flex items-center justify-center text-center">
         <p class="text-sm md:text-base">
             Conversations are used to train AI and Copilot can learn about your interests.
@@ -22,18 +22,20 @@
             <a href="#" class="text-blue-400 underline hover:text-blue-500">Learn more</a>.
         </p>
     </div>
- 
+
     <div class="flex items-center justify-center bg-gray-900 p-[0.5rem] mb-4 w-[30rem] rounded-[1.5rem] border">
         <div class="flex items-center w-[28rem] gap-2 ">
-            <span class="text-xl pr-2" > 
+            <span class="text-xl pr-2">
                 <img src="copilot-icon.png" alt="" class="w-5">
             </span>
             <span class="text-xl pr-2">
-                 +
+                +
             </span>
-            <input type="text" placeholder="Message Copilot" class="bg-gray-700 text-gray-400 px-4 py-1.5 rounded-full flex-grow">
+            <input type="text" placeholder="Message Copilot"
+                class="bg-gray-700 text-gray-400 px-4 py-1.5 rounded-full flex-grow">
             <button>
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 hover:text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 hover:text-gray-200" fill="none"
+                    viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-lnecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                 </svg>
             </button>
