--- a/diwaliprojects/personal portfolio/index.html
+++ b/diwaliprojects/personal portfolio/index.html
@@ -32,6 +32,7 @@
                 </div>
             </div>
             <div class="hero-image">
+                <div class="bgdiv"></div>
                 <img src="removebg.png" alt="William Harry">
                  
             </div>
