--- a/diwaliprojects/weather cards/index.html
+++ b/diwaliprojects/weather cards/index.html
@@ -12,7 +12,7 @@
     <div class="weather-container">
         <div class="weather-card cloudy">
             <div class="weather-info">
-                <h3>It's Cloud</h3>
+                <h3>It's Cloudy</h3>
                 <h1>17°</h1>
             </div>
             <div class="weather-icon">
